--- a/AdminLTE/src/AdminLTE/Views/Account/ForgotPassword.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Account/ForgotPassword.cshtml
@@ -3,29 +3,34 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h2>@ViewData["Title"].</h2>
-<p>
-    For more information on how to enable reset password please see this <a href="http://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
-</p>
-
-@*<form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
-    <h4>Enter your email.</h4>
-    <hr />
-    <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+@*<h2>@ViewData["Title"].</h2>
+    <p>
+        For more information on how to enable reset password please see this <a href="http://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
+    </p>*@
+<div class="register-box">
+    <div class="register-logo">
+        <a href="../../index2.html"><b>Admin</b>LTE</a>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Submit</button>
-        </div>
-    </div>
-</form>*@
-
+    <div class="register-box-body">
+        <p class="login-box-msg">Reset Password</p>
+        <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
+            <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Email" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Email" class="form-control" required />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 pull-right">
+                    <button type="submit" class="btn btn-primary btn-block btn-flat">Reset</button>
+                </div><!-- /.col -->
+            </div>
+        </form>
+        <a asp-action="Login" class="text-center">I already have a membership</a>
+    </div><!-- /.form-box -->
+</div><!-- /.register-box -->
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
