adding reactjs components

--- a/AdminLTE/src/AdminLTE/Views/Home/Index.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     Layout = "~/Views/Shared/_masterLayout.cshtml";
     ViewBag.Title = "Home Page";
 }
+@*<script type="text/jsx">
+    React.render(<Box title="@ViewBag.Title" />, document.getElementById('react-container'));
+</script>*@
 <!-- Default box -->
 <div class="box">
     <div class="box-header with-border">
