--- a/AdminLTE/src/AdminLTE/Views/Shared/_masterLayout.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Shared/_masterLayout.cshtml
@@ -13,13 +13,13 @@
         <link rel="stylesheet" href="~/dist/css/skins/_all-skins.min.css">
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
+        @*<link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
               asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
         <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
               asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
               asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
-        <link rel="stylesheet" href="~/css/site.css" asp-file-version="true" />
+        <link rel="stylesheet" href="~/css/site.css" asp-file-version="true" />*@
     </environment>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -130,7 +130,7 @@
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <span class="hidden-xs">Alexander Pierce</span>
+                                @*<span class="hidden-xs">Alexander Pierce</span>*@
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
@@ -352,7 +352,7 @@
                 </ol>
             </section>
             <!-- Main content -->
-            <section class="content">
+            <section id="react-container" class="content">
                 @RenderBody()
             </section><!-- /.content -->
         </div><!-- /.content-wrapper -->
@@ -525,11 +525,15 @@
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
             <script src="~/lib/slimScroll/jquery.slimscroll.min.js"></script>
             <script src="~/lib/fastclick/fastclick.min.js"></script>
+            <script src="~/lib/react/react.js"></script>
+            <script src="~/lib/react/JSXTransformer.js"></script>
+            <script src="~/lib/react-router/build/umd/reactrouter.js"></script>
             <script src="~/dist/js/app.min.js"></script>
             <script src="~/dist/js/demo.js"></script>
+            <script src="~/dist/js/components/ui/Box.jsx"></script>
         </environment>
         <environment names="Staging,Production">
-            <script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
+            @*<script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
                     asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                     asp-fallback-test="window.jQuery">
             </script>
@@ -545,7 +549,7 @@
                     asp-fallback-src="~/lib/bootstrap-touch-carousel/dist/js/bootstrap-touch-carousel.js"
                     asp-fallback-test="window.Hammer && window.Hammer.Instance">
             </script>
-            <script src="~/js/site.js" asp-file-version="true"></script>
+            <script src="~/js/site.js" asp-file-version="true"></script>*@
         </environment>
 
         @RenderSection("scripts", required: false)
