--- a/AdminLTE/src/AdminLTE/Views/Shared/_Layout.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Shared/_Layout.cshtml
@@ -13,13 +13,13 @@
             <link rel="stylesheet" href="~/lib/iCheck/skins/square/blue.css" />
         </environment>
         <environment names="Staging,Production">
-            <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
+            @*<link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
                   asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
                   asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
             <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
                   asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
                   asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
-            <link rel="stylesheet" href="~/css/site.css" asp-file-version="true" />
+            <link rel="stylesheet" href="~/css/site.css" asp-file-version="true" />*@
         </environment>
     </head>
     <body class="hold-transition login-page">
@@ -32,16 +32,16 @@
             <script src="~/lib/iCheck/icheck.js"></script>
             <script>
               $(function () {
-                $('input').iCheck({
-                  checkboxClass: 'icheckbox_square-blue',
-                  radioClass: 'iradio_square-blue',
-                  increaseArea: '20%' // optional
-                });
+                //$('input').iCheck({
+                //  checkboxClass: 'icheckbox_square-blue',
+                //  radioClass: 'iradio_square-blue',
+                //  increaseArea: '20%' // optional
+                //});
               });
             </script>
         </environment>
         <environment names="Staging,Production">
-            <script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
+            @*<script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
                     asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                     asp-fallback-test="window.jQuery">
             </script>
@@ -57,7 +57,7 @@
                     asp-fallback-src="~/lib/bootstrap-touch-carousel/dist/js/bootstrap-touch-carousel.js"
                     asp-fallback-test="window.Hammer && window.Hammer.Instance">
             </script>
-            <script src="~/js/site.js" asp-file-version="true"></script>
+            <script src="~/js/site.js" asp-file-version="true"></script>*@
         </environment>
 
         @RenderSection("scripts", required: false)
