--- a/AdminLTE/src/AdminLTE/Views/Shared/_masterLayout.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Shared/_masterLayout.cshtml
@@ -352,7 +352,7 @@
                 </ol>
             </section>
             <!-- Main content -->
-            <section id="react-container" class="content">
+            <section class="content">
                 @RenderBody()
             </section><!-- /.content -->
         </div><!-- /.content-wrapper -->
