Added to components

--- a/AdminLTE/src/AdminLTE/Views/Home/Index.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/_masterLayout.cshtml";
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Dashboard";
+    ViewBag.Description = "it all starts here";
 }
 <div id="dashboard"></div>
-
 <script type="text/jsx">
     React.render(<div>
                     <Box title="one" />
