Created Box Widgets

--- a/AdminLTE/src/AdminLTE/Views/Shared/_masterLayout.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Shared/_masterLayout.cshtml
@@ -24,6 +24,7 @@
     <script type="text/jsx" src="@Url.Content("~/dist/js/components/ui/Breadcrumb.jsx")"></script>
     <script type="text/jsx" src="@Url.Content("~/dist/js/components/mainsidebar/MainSidebar.jsx")"></script>
     <script type="text/jsx" src="@Url.Content("~/dist/js/components/controlsidebar/ControlSidebar.jsx")"></script>
+    <script type="text/jsx" src="@Url.Content("~/dist/js/components/widget/InfoBox.jsx")"></script>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <!-- Site wrapper -->
