--- a/AdminLTE/src/AdminLTE/Views/Widgets/Index.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Widgets/Index.cshtml
@@ -34,12 +34,7 @@
                     </div>
                     <div className="col-md-3 col-sm-6 col-xs-12">
                         <InfoBox title="Likes" icon="thumbs-o-up" boxcolor="bg-green" dataurl="/Home/GetInfo">
-                            <div className="progress">
-                                <div className="progress-bar" style={{width: 20}}></div>
-                            </div>
-                            <span className="progress-description">
-                                20% Increase in 30 Days
-                            </span>
+                            <Progressbar message="Increase in 30 Days" dataurl="/Home/GetInfo" />
                         </InfoBox>
                     </div>
                     <div className="col-md-3 col-sm-6 col-xs-12">
