--- a/AdminLTE/src/AdminLTE/Views/Widgets/Index.cshtml
+++ b/AdminLTE/src/AdminLTE/Views/Widgets/Index.cshtml
@@ -24,12 +24,7 @@
                 <div className="row">
                     <div className="col-md-3 col-sm-6 col-xs-12">
                         <InfoBox title="Bookmarks" icon="bookmark-o" boxcolor="bg-aqua" dataurl="/Home/GetInfo">
-                            <div className="progress">
-                                <div className="progress-bar" style={{width: 70}}></div>
-                            </div>
-                            <span className="progress-description">
-                                70% Increase in 30 Days
-                            </span>
+                            <Progressbar message="Increase in 30 Days" dataurl="/Home/GetInfo" />
                         </InfoBox>
                     </div>
                     <div className="col-md-3 col-sm-6 col-xs-12">
@@ -39,22 +34,12 @@
                     </div>
                     <div className="col-md-3 col-sm-6 col-xs-12">
                         <InfoBox title="Events" icon="calendar" boxcolor="bg-yellow" dataurl="/Home/GetInfo">
-                            <div className="progress">
-                                <div className="progress-bar" style={{width: 90}}></div>
-                            </div>
-                            <span className="progress-description">
-                                90% Increase in 30 Days
-                            </span>
+                            <Progressbar message="Increase in 30 Days" dataurl="/Home/GetInfo" />
                         </InfoBox>
                     </div>
                     <div className="col-md-3 col-sm-6 col-xs-12">
                         <InfoBox title="Comments" icon="comments-o" boxcolor="bg-red" dataurl="/Home/GetInfo">
-                            <div className="progress">
-                                <div className="progress-bar" style={{width: 40}}></div>
-                            </div>
-                            <span className="progress-description">
-                                40% Increase in 30 Days
-                            </span>
+                            <Progressbar message="Increase in 30 Days" dataurl="/Home/GetInfo" />
                         </InfoBox>
                     </div>
                 </div>
